--- a/api-spec/schemas/login_request.yml
+++ b/api-spec/schemas/login_request.yml
@@ -9,6 +9,5 @@ properties:
     example: "john_doe"
   password:
     type: string
-    format: password
     maxLength: 128
-    example: "secretpassword123"
+    example: "password123"
