--- a/api-spec/schemas/error.yml
+++ b/api-spec/schemas/error.yml
@@ -2,4 +2,7 @@ type: object
 properties:
   error:
     type: string
-    example: "Invalid credentials"
+    example: "Error message"
+  detail:
+    type: string
+    example: "Detailed error description"
