--- a/api-spec/schemas/message.yml
+++ b/api-spec/schemas/message.yml
@@ -14,8 +14,8 @@ properties:
     example: "john_doe"
   text:
     type: string
-    example: "Hello everyone!"
+    example: "Hello, this is my message!"
   created_at:
     type: string
     format: date-time
-    example: "2025-11-24T12:00:00Z"
+    example: "2025-11-24T11:07:01.330Z"
