--- a/api-spec/schemas/register_request.yml
+++ b/api-spec/schemas/register_request.yml
@@ -5,11 +5,11 @@ required:
 properties:
   username:
     type: string
+    minLength: 1
     maxLength: 150
     example: "john_doe"
   password:
     type: string
-    format: password
     minLength: 4
     maxLength: 128
-    example: "secretpassword123"
+    example: "password123"
