--- a/api-spec/schemas/message.yml
+++ b/api-spec/schemas/message.yml
@@ -1,7 +1,7 @@
 type: object
 required:
   - id
-  - username
+  - author
   - text
   - created_at
 properties:
@@ -9,7 +9,7 @@ properties:
     type: integer
     format: int64
     example: 1
-  username:
+  author:
     type: string
     example: "john_doe"
   text:
